--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
     <section id="section1" onclick="changeBanner()" style="background-image: url(images/banner-BG2.jpg)">
 
         <article>
+            <div>
             <h1 class="out-article">Te llevamos más allá</h1>
             <p class="out-article">
                 Conseguimos que tu negocio llegue a su máxima eficiencia mejorando productividad , estableciendo ambicioso objetivos a mediano y largo plazo
             </p>
             <button>Contactanos</button>
-
+        </div>
         </article>
     </section>
 
@@ -260,6 +261,7 @@
 
 
         <footer>
+            <div>
             <div id="contacto">
                 <div id="telefonos">
                     <img class="icon" src="images/icons/svg/phone1.svg" />
@@ -308,14 +310,15 @@
                 </div>
             </div>
             <div id="redes">
-                <div id="location">
-                    <img class="icon" src="images/icons/svg/location.svg" />
+                <div id="facebook">
+                    <a href="https://facebook.com" target="_blank"><img class="icon" src="images/icons/svg/006-facebook.svg" /></a>
 
                 </div>
-                <div id="location">
-                    <img class="icon" src="images/icons/svg/location.svg" />
+                <div id="instagram">
+                    <a href="https://facebook.com" target="_blank"><img class="icon" src="images/icons/svg/instagram.svg" /></a>
                 </div>
             </div>
+        </div>
             <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3281.954387174646!2d-58.54906854813232!3d-34.655854847905665!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3cd964c892ffbd65!2sjust%20solution!5e0!3m2!1ses-419!2sar!4v1589555201354!5m2!1ses-419!2sar"
                 width="500" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <!--
