items en herramientas

--- a/index.html
+++ b/index.html
@@ -179,7 +179,12 @@
 
                 <hr />
                 <h4>Landing Page</h4>
-                <p>Una landing page, o página de aterrizaje, es una página web diseñada específicamente para convertir visitantes en leads. </p>
+                <ul>
+                    <li>Una web dedicada a que los clientes nos conozcan</li>
+                    <li>Mostrale al mundo que ofreces</li>
+                    <li>Ofrece tus canales de comunicaciones</li>
+                </ul>
+                <!--<p>Una landing page, o página de aterrizaje, es una página web diseñada específicamente para convertir visitantes en leads. </p>-->
             </div>
 
             <div class="card" id="card2">
@@ -187,29 +192,47 @@
 
                 <hr />
                 <h4>E-Comemerce</h4>
-                <p>Un comercio electrónico consiste en la compra y venta de productos o de servicios a través de medios electrónicos, tales como redes sociales y otras páginas web </p>
+                <ul>
+                    <li>Ofrece una tienda online</li>
+                    <li>Llega con tus productos a todos lados</li>
+                </ul>
+                <!--<p>Un comercio electrónico consiste en la compra y venta de productos o de servicios a través de medios electrónicos, tales como redes sociales y otras páginas web </p>-->
             </div>
             <div class="card" id="card3">
                 <img src="/images/icons/svg/googleads.svg" />
                 <hr />
-                <h4>Google Ads</h4>
-                <p>Google Ads es un servicio y un programa de la empresa Google que se utiliza para ofrecer publicidad patrocinada a potenciales anunciantes. Los anuncios patrocinados de Google Ads aparecen en: En la página de resultados junto con los resultados
-                    de búsquedas naturales u orgánicas. </p>
+                <h4>Google Ads</h4><ul>
+                    <li>Obtene posicionamiento en el buscador</li>
+                    <li>Vincula tu marca y palabras claves</li>
+                    <li>Llega a infinidad de personas</li>
+                </ul>
+               <!-- <p>Google Ads es un servicio y un programa de la empresa Google que se utiliza para ofrecer publicidad patrocinada a potenciales anunciantes. Los anuncios patrocinados de Google Ads aparecen en: En la página de resultados junto con los resultados
+                    de búsquedas naturales u orgánicas. </p>-->
             </div>
             <div class="card" id="card4">
                 <img src="/images/icons/svg/facebook.svg" />
 
                 <hr />
                 <h4>Facebook Ads</h4>
-                <p>Facebook Ads es un sistema publicitario online que sirve para promocionar tanto una página de Facebook como material externo y pagando por los clics que se reciben. Es una herramienta muy útil para las empresas, sobre todo para pequeñas
-                    y medianas, para tiendas online o para crear eventos. Facebook Ads permite obtener muchas ventajas por un presupuesto muy pequeño. </p>
+                <ul>
+                    <li>Promociona tu marca en la red mas grande de internet</li>
+                    <li>Llega a mas personas, dirigiendo a quien queres que le llegue</li>
+                    <li>Generamos una pagina para que los usuarios puedan seguir la marca por ese canal</li>
+                </ul>
+                <!--<p>Facebook Ads es un sistema publicitario online que sirve para promocionar tanto una página de Facebook como material externo y pagando por los clics que se reciben. Es una herramienta muy útil para las empresas, sobre todo para pequeñas
+                    y medianas, para tiendas online o para crear eventos. Facebook Ads permite obtener muchas ventajas por un presupuesto muy pequeño. </p>-->
             </div>
             <div class="card" id="card5">
                 <img src="/images/icons/svg/bussiness-mail.svg" />
 
                 <hr />
                 <h4>Marketing E-mail</h4>
-                <p>La publicidad por correo electrónico, email marketing, marketing por email, correo comercial o email comercial, ​ es enviar un mensaje comercial directamente utilizando como canal el correo electrónico</p>
+                <ul>
+                    <li>Contactate con tus clientes con un correo propietario</li>
+                    <li>Otorgá prestigio a tu marca</li>
+                    <li>Personaliza tu casilla de e-mail como quieras</li>
+                </ul>
+                <!--<p>La publicidad por correo electrónico, email marketing, marketing por email, correo comercial o email comercial, ​ es enviar un mensaje comercial directamente utilizando como canal el correo electrónico</p>-->
             </div>
         </div>
 
