animacion a items herramientas

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                 <hr />
                 <h4>Landing Page</h4>
-                <ul>
+                <ul id="ul-card-1" style="transform: translate(100%)">
                     <li>Una web dedicada a que los clientes nos conozcan</li>
                     <li>Mostrale al mundo que ofreces</li>
                     <li>Ofrece tus canales de comunicaciones</li>
@@ -192,7 +192,7 @@
 
                 <hr />
                 <h4>E-Comemerce</h4>
-                <ul>
+                <ul id="ul-card-2" style="transform: translate(100%)">
                     <li>Ofrece una tienda online</li>
                     <li>Llega con tus productos a todos lados</li>
                 </ul>
@@ -201,7 +201,7 @@
             <div class="card" id="card3">
                 <img src="/images/icons/svg/googleads.svg" />
                 <hr />
-                <h4>Google Ads</h4><ul>
+                <h4>Google Ads</h4><ul id="ul-card-3" style="transform: translate(100%)">
                     <li>Obtene posicionamiento en el buscador</li>
                     <li>Vincula tu marca y palabras claves</li>
                     <li>Llega a infinidad de personas</li>
@@ -214,7 +214,7 @@
 
                 <hr />
                 <h4>Facebook Ads</h4>
-                <ul>
+                <ul id="ul-card-4" style="transform: translate(100%)">
                     <li>Promociona tu marca en la red mas grande de internet</li>
                     <li>Llega a mas personas, dirigiendo a quien queres que le llegue</li>
                     <li>Generamos una pagina para que los usuarios puedan seguir la marca por ese canal</li>
@@ -227,7 +227,7 @@
 
                 <hr />
                 <h4>Marketing E-mail</h4>
-                <ul>
+                <ul id="ul-card-5" style="transform: translate(100%)">
                     <li>Contactate con tus clientes con un correo propietario</li>
                     <li>Otorgá prestigio a tu marca</li>
                     <li>Personaliza tu casilla de e-mail como quieras</li>
