--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
         <article>
             <div>
-            <h1 class="out-article">Te llevamos más allá</h1>
+            <h1 class="out-article">Te llevamos <p>más allá</p></h1>
             <p class="out-article">
                 Conseguimos que tu negocio llegue a su máxima eficiencia mejorando productividad , estableciendo ambicioso objetivos a mediano y largo plazo
             </p>
-            <button>Contactanos</button>
+            <a>Contactanos</a>
         </div>
         </article>
     </section>
